// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`next-eslint-config-project > next-eslint-config-project 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [],
  },
  "warnings": [],
}
`;

exports[`next-eslint-config-project --type-aware > next-eslint-config-project--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [],
  },
  "warnings": [],
}
`;

exports[`next-eslint-config-project merge > next-eslint-config-project--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
  },
  "warnings": [],
}
`;
